--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,12 @@
-<title>Holiday Homes</title>
-<h1>Welcome to Holiday Homes</h1>
-<div><a href="{% url 'profiles_index' %}">Profiles</a></div>
-<div><a href="{% url 'lettings_index' %}">Lettings</a></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Holiday Homes</title>
+</head>
+<body>
+    <h1>Welcome to Holiday Homes</h1>
+    <div><a href="{% url 'profiles_index' %}">Profiles</a></div>
+    <div><a href="{% url 'lettings_index' %}">Lettings</a></div>
+</body>
+</html>
