--- a/templates/lettings_index.html
+++ b/templates/lettings_index.html
@@ -1,17 +1,25 @@
-<title>Lettings</title>
-<h1>Lettings</h1>
-{% if lettings_list %}
-    <ul>
-    {% for letting in lettings_list %}
-        <li>
-            <a href="{% url 'letting' letting_id=letting.id %}">
-                {{ letting.title }}
-            </a>
-        </li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No lettings are available.</p>
-{% endif %}
-<div><a href="{% url 'index' %}">Home</a></div>
-<div><a href="{% url 'profiles_index' %}">Profiles</a></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Lettings</title>
+</head>
+<body>
+    <h1>Lettings</h1>
+    {% if lettings_list %}
+        <ul>
+        {% for letting in lettings_list %}
+            <li>
+                <a href="{% url 'letting' letting_id=letting.id %}">
+                    {{ letting.title }}
+                </a>
+            </li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No lettings are available.</p>
+    {% endif %}
+    <div><a href="{% url 'index' %}">Home</a></div>
+    <div><a href="{% url 'profiles_index' %}">Profiles</a></div>
+</body>
+</html>
