--- a/templates/profiles_index.html
+++ b/templates/profiles_index.html
@@ -1,17 +1,25 @@
-<title>Profiles</title>
-<h1>Profiles</h1>
-{% if profiles_list %}
-    <ul>
-    {% for profile in profiles_list %}
-        <li>
-            <a href="{% url 'profile' username=profile.user.username %}">
-                {{ profile.user.username }}
-            </a>
-        </li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No profiles are available.</p>
-{% endif %}
-<div><a href="{% url 'index' %}">Home</a></div>
-<div><a href="{% url 'lettings_index' %}">Lettings</a></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Profiles</title>
+</head>
+<body>
+    <h1>Profiles</h1>
+    {% if profiles_list %}
+        <ul>
+        {% for profile in profiles_list %}
+            <li>
+                <a href="{% url 'profile' username=profile.user.username %}">
+                    {{ profile.user.username }}
+                </a>
+            </li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No profiles are available.</p>
+    {% endif %}
+    <div><a href="{% url 'index' %}">Home</a></div>
+    <div><a href="{% url 'lettings_index' %}">Lettings</a></div>
+</body>
+</html>
