--- a/profiles/templates/profiles/index.html
+++ b/profiles/templates/profiles/index.html
@@ -10,7 +10,7 @@
         <ul>
         {% for profile in profiles_list %}
             <li>
-                <a href="{% url 'profile' username=profile.user.username %}">
+                <a href="{% url 'profiles:profile' username=profile.user.username %}">
                     {{ profile.user.username }}
                 </a>
             </li>
@@ -20,6 +20,6 @@
         <p>No profiles are available.</p>
     {% endif %}
     <div><a href="{% url 'index' %}">Home</a></div>
-    <div><a href="{% url 'lettings_index' %}">Lettings</a></div>
+    <div><a href="{% url 'lettings:index' %}">Lettings</a></div>
 </body>
 </html>
