--- a/lettings/templates/lettings/index.html
+++ b/lettings/templates/lettings/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous">
     <title>Lettings</title>
 </head>
 <body>
-    <h1>Lettings</h1>
+    <h1 class="w-100 text-center mt-5">Lettings</h1>
     {% if lettings_list %}
-        <ul>
+        <ul class="list-group col-md-6 mx-auto mt-5">
         {% for letting in lettings_list %}
-            <li>
+            <li class="list-group-item">
                 <a href="{% url 'lettings:letting' letting_id=letting.id %}">
                     {{ letting.title }}
                 </a>
@@ -19,7 +22,9 @@
     {% else %}
         <p>No lettings are available.</p>
     {% endif %}
-    <div><a href="{% url 'index' %}">Home</a></div>
-    <div><a href="{% url 'profiles:index' %}">Profiles</a></div>
+    <div class="d-flex justify-content-center mt-5">
+        <a class="btn btn-primary me-3" href="{% url 'index' %}">Home</a>
+        <a class="btn btn-primary" href="{% url 'profiles:index' %}">Profiles</a>
+    </div>
 </body>
 </html>
