--- a/lettings/templates/lettings/letting.html
+++ b/lettings/templates/lettings/letting.html
@@ -2,15 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+          crossorigin="anonymous">
     <title>{{ title }}</title>
 </head>
 <body>
-    <h1>{{ title }}</h1>
-    <p>{{ address.number }} {{ address.street }}</p>
-    <p>{{ address.city }}, {{ address.state }} {{ address.zip_code }}</p>
-    <p>{{ address.country_iso_code }}</p>
-    <div><a href="{% url 'lettings:index' %}">Back</a></div>
-    <div><a href="{% url 'index' %}">Home</a></div>
-    <div><a href="{% url 'profiles:index' %}">Profiles</a></div>
+    <h1 class="w-100 text-center mt-5">{{ title }}</h1>
+    <div class="card col-md-4 mx-auto mt-5 p-3">
+        <p>{{ address.number }} {{ address.street }}</p>
+        <p>{{ address.city }}, {{ address.state }} {{ address.zip_code }}</p>
+        <p>{{ address.country_iso_code }}</p>
+    </div>
+    <div class="d-flex justify-content-center mt-5">
+            <a class="btn btn-secondary me-3" href="{% url 'lettings:index' %}">Back</a>
+            <a class="btn btn-primary me-3" href="{% url 'index' %}">Home</a>
+            <a class="btn btn-primary" href="{% url 'profiles:index' %}">Profiles</a>
+        </div>
 </body>
 </html>
