--- a/profiles/templates/profiles/index.html
+++ b/profiles/templates/profiles/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous">
     <title>Profiles</title>
 </head>
 <body>
-    <h1>Profiles</h1>
+    <h1 class="w-100 text-center mt-5">Profiles</h1>
     {% if profiles_list %}
-        <ul>
+        <ul class="list-group col-md-6 mx-auto mt-5">
         {% for profile in profiles_list %}
-            <li>
+            <li class="list-group-item">
                 <a href="{% url 'profiles:profile' username=profile.user.username %}">
                     {{ profile.user.username }}
                 </a>
@@ -19,7 +22,9 @@
     {% else %}
         <p>No profiles are available.</p>
     {% endif %}
-    <div><a href="{% url 'index' %}">Home</a></div>
-    <div><a href="{% url 'lettings:index' %}">Lettings</a></div>
+    <div class="d-flex justify-content-center mt-5">
+        <a class="btn btn-primary me-3" href="{% url 'index' %}">Home</a>
+        <a class="btn btn-primary" href="{% url 'lettings:index' %}">Lettings</a>
+    </div>
 </body>
 </html>
