--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,16 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous">
     <title>{{ profile.user.username }}</title>
 </head>
 <body>
-    <h1>{{ profile.user.username }}</h1>
-    <p>First name: {{ profile.user.first_name }}</p>
-    <p>Last name: {{ profile.user.last_name }}</p>
-    <p>Email: {{ profile.user.email }}</p>
-    <p>Favorite city: {{ profile.favorite_city }}</p>
-    <div><a href="{% url 'profiles:index' %}">Back</a></div>
-    <div><a href="{% url 'index' %}">Home</a></div>
-    <div><a href="{% url 'lettings:index' %}">Lettings</a></div>
+    <h1 class="w-100 text-center mt-5">{{ profile.user.username }}</h1>
+    <div class="card col-md-4 mx-auto mt-5 p-3">
+        <p><strong class="text-muted bold">First name:</strong> {{ profile.user.first_name }}</p>
+        <p><strong class="text-muted bold">Last name:</strong> {{ profile.user.last_name }}</p>
+        <p><strong class="text-muted bold">Email:</strong> {{ profile.user.email }}</p>
+        <p><strong class="text-muted bold">Favorite city:</strong> {{ profile.favorite_city }}</p>
+    </div>
+    <div class="d-flex justify-content-center mt-5">
+        <a class="btn btn-secondary me-3" href="{% url 'profiles:index' %}">Back</a>
+        <a class="btn btn-primary me-3" href="{% url 'index' %}">Home</a>
+        <a class="btn btn-primary" href="{% url 'lettings:index' %}">Lettings</a>
+    </div>
 </body>
 </html>
