--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+          crossorigin="anonymous">
     <title>Holiday Homes</title>
 </head>
 <body>
-    <h1>Welcome to Holiday Homes</h1>
-    <div><a href="{% url 'profiles:index' %}">Profiles</a></div>
-    <div><a href="{% url 'lettings:index' %}">Lettings</a></div>
+    <div class="col col-sm-4 mx-auto mt-5 p-5 shadow">
+        <h1 class="w-100 text-center mt-5">Welcome to Holiday Homes</h1>
+        <div class="d-flex justify-content-evenly mt-5">
+            <a class="btn btn-primary" href="{% url 'profiles:index' %}">Profiles</a>
+            <a class="btn btn-primary" href="{% url 'lettings:index' %}">Lettings</a>
+        </div>
+    </div>
 </body>
 </html>
